[package]
name = "nat-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
actix = "0.13.0"
actix-web = "4"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
minify-html-onepass = "0.11.1"
syn = "2.0.28"
